// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyListAlert component given no props matches the snapshot 1`] = `
<div
  class="danger_message text-danger-900"
>
  <glbutton-stub
    aria-label="Close"
    class="btn-blank float-right mr-1 mt-1 js-close text-danger-900"
  >
    <icon-stub
      aria-hidden="true"
      name="close"
      size="16"
    />
  </glbutton-stub>
   
  <!---->
   
  <p>
    foo 
    <span>
      bar
    </span>
  </p>
</div>
`;

exports[`DependencyListAlert component given the headerText prop matches the snapshot 1`] = `
<div
  class="danger_message text-danger-900"
>
  <glbutton-stub
    aria-label="Close"
    class="btn-blank float-right mr-1 mt-1 js-close text-danger-900"
  >
    <icon-stub
      aria-hidden="true"
      name="close"
      size="16"
    />
  </glbutton-stub>
   
  <h4
    class="text-danger-900"
  >
    A header
  </h4>
   
  <p>
    foo 
    <span>
      bar
    </span>
  </p>
</div>
`;

exports[`DependencyListAlert component given the warning type and headerText props matches the snapshot 1`] = `
<div
  class="warning_message text-warning-900"
>
  <glbutton-stub
    aria-label="Close"
    class="btn-blank float-right mr-1 mt-1 js-close text-warning-900"
  >
    <icon-stub
      aria-hidden="true"
      name="close"
      size="16"
    />
  </glbutton-stub>
   
  <h4
    class="text-warning-900"
  >
    Some header
  </h4>
   
  <p>
    foo 
    <span>
      bar
    </span>
  </p>
</div>
`;
